fixed wrap of article cards

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ canvas {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 
